# dalizai-knowledge-rag-service

./: .dockerignore  .env.example  .full_diff.patch  .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/skills/: code-review.md  review-report.md
.pytest_tmp/test_create_and_read_latest_su0/: rag_service.db
.pytest_tmp/test_create_audit_log0/: rag_service.db
.pytest_tmp/test_gap_cluster_event_and_sta0/: rag_service.db
.pytest_tmp/test_list_and_assign_uncluster0/: rag_service.db
.pytest_tmp/test_list_knowledge_gaps0/: rag_service.db
.pytest_tmp/test_load_eval_cases_from_json0/: cases.jsonl
.pytest_tmp/test_parser_accepts_english_pi0/: faq.md
.pytest_tmp/test_ready_checks_ingest_and_q0/: rag_service.db
.pytest_tmp/test_update_knowledge_gap_stat0/: rag_service.db
.pytest_tmp/test_update_knowledge_gap_stat1/: rag_service.db
.pytest_tmp/test_v1_health_ready_checks_in0/: rag_service.db
.pytest_tmp/test_validator_rejects_duplica0/: a.md  b.md
.pytest_tmp/test_validator_rejects_high_ri0/: coupon_policy.md
docs/: agent_integration_contract_v0.1.md  agent_rag_docker_integration_v0.1.md  agent_rag_eval_dataset_request_v0.1.md  architecture_v0.1.md  business_knowledge_markdown_dataset_request_v0.1.md  design_v0.1.md  faq_rag_service_interface_design_v0.1.md  interface_v0.2.md  knowledge_format_v0.1.md  operations_v0.1.md  rag_service_design_report_v1.0.md
eval/: agent_cases.jsonl  cases.jsonl  questions.jsonl
scripts/: check_dashscope.py  cluster_gap_events.py  ingest_knowledge.py  init_metadata_db.py  review_due_report.py  run_eval.py
(+63 files in other folders)
