[project]
name = "dalizai-rag-service"
version = "0.1.0"
description = "Independent knowledge RAG service for dalizai agents."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "httpx>=0.27,<1.0",
    "qdrant-client>=1.9,<2.0",
    "PyYAML>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
model = [
    "sentence-transformers>=3.0,<4.0",
    "FlagEmbedding>=1.2.10,<2.0",
]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.5,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = [
    "apps/rag_service/tests",
    "apps/model_service/tests",
]
asyncio_mode = "auto"


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
